Test Coverage Improvements.